# Dagpi-auth

./: .gitignore  Cargo.toml  Dockerfile  README.md  schema.sql  sqlx-data.json
.github/workflows/: docker-push.yml
migrations/: 20210202085842_stats.sql
src/: main.rs
src/auth/: middlewares.rs  mod.rs
src/routing/: mod.rs  routes.rs
src/stats/: mod.rs  model.rs  stat.rs
