[package]
name = "auth_api"
version = "0.1.0"
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls","postgres"] }
actix-web="3.3.0"
actix-rt = "1.1.1"
serde = "1.0"
log = "0.4.11"
env_logger = "0.7.1"
dotenv="0.15.0"
futures="0.3.8"
actix-service="1.0.6"