# syntax = denzp/cargo-wharf-frontend:v0.1.0-alpha.2
[package]
name = "auth_api"
version = "0.1.0"
authors = ["Daggy1234 <arnav.jindal7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.1", default-features = false, features = ["runtime-actix-rustls","postgres", "macros", "time", "offline"] }
actix-web="3.3.0"
actix-rt = "1.1.1"
serde = "1.0"
log = "0.4.14"
env_logger = "0.7.1"
dotenv="0.15.0"
futures="0.3.8"
actix-service="1.0.6"

[package.metadata.wharf.builder]
image = "rust:1.48.0"

[package.metadata.wharf.output]
image = "gcr.io/distroless/cc-debian10"
entrypoint = ["auth_api"]
stop-signal = "SIGINT"

[package.metadata.wharf.output.labels]
"simple-label" = "simple value"
"my.awesome.label" = "another value"

[[package.metadata.wharf.binary]]
name = "auth_api"
destination = "/usr/local/bin/auth_api"

